fix logo stretch in company header

--- a/src/components/JobDetails/JobDetails.scss
+++ b/src/components/JobDetails/JobDetails.scss
@@ -115,6 +115,13 @@ ul {
             top: -10%;
             width: 50px;
             height: 50px;
+            &.fallback {
+                background-color: #eeeffc;
+                body.dark-mode & {
+                    background-color: #525861 !important;
+                }
+
+            }
             @media(min-width: $breakpoint-tablet) {
                display: flex;
                position:static;
@@ -127,17 +134,21 @@ ul {
                 width: 100%;
                 height: 100%;
                 border-radius: 15px;
+                object-fit: contain;
+                object-position: center center;
                 @media(min-width: $breakpoint-tablet) {
                     border-radius: 0;
                  }
                  &.fallback--companyLogo {
-                    //display: none !important;
+                    display: none !important;
+                    /*
                     display: flex;
                     width: 100%;
                     height: 100%;
                     border-radius: 15px;
                     background: $color-button-default !important;
                     border-radius: 0;
+                    */
                 }
                 
             }
